--- a/class_test.html
+++ b/class_test.html
@@ -89,7 +89,7 @@
 					model_data: model_data,
 					optimizer_config: optimizer_config,
 					translations_file: "translations.php?print=1",
-					math_tab_code_div: "math_tab_code"
+					//math_tab_code_div: "math_tab_code"
 				});
 
 				asanai.show_status_bar();
@@ -104,6 +104,7 @@
 
 				asanai.set_labels(["erste kategorie", "zweite kategorie", "dritte kategorie", "vierte kategorie"]);
 
+				/*
 				asanai.show_internals("internal_states", 1);
 				//asanai.hide_internals();
 
@@ -115,6 +116,7 @@
 				asanai.draw_fcnn("fcnn_div");
 
 				asanai.write_model_summary("summary_pre")
+				*/
 
 				//asanai.write_tensors_info("memory");
 
