--- a/class_test.html
+++ b/class_test.html
@@ -104,6 +104,8 @@
 
 				asanai.set_labels(["erste kategorie", "zweite kategorie", "dritte kategorie", "vierte kategorie"]);
 
+				asanai.show_layers_gui("layers_gui");
+
 				/*
 				asanai.show_internals("internal_states", 1);
 				//asanai.hide_internals();
