--- a/class_test.html
+++ b/class_test.html
@@ -40,6 +40,8 @@
 		<button onclick="test_model_switch_three()">Test model switch 3</button>
 		<button onclick="load_test_images_and_train()">Load test images and train</button>
 
+		<div id="layers_gui"></div>
+
 		<pre>====</pre>
 		<div id="test_images"></div>
 		<div id="plotly_history"></div>
