--- a/class_test.html
+++ b/class_test.html
@@ -16,6 +16,7 @@
 		<link href="css/soft_button.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="libs/ribbon.js"></script>
 		<link href="css/ribbon-dark.css" rel="stylesheet" type="text/css" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
 
 		<style>
