--- a/class_test.html
+++ b/class_test.html
@@ -9,15 +9,16 @@
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 		<script src='libs/temml/temml.js' crossorigin></script>
 		<script src='libs/md5.umd.min.js' crossorigin></script>
+		<script type="text/javascript" src="libs/ribbon.js"></script>
+		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
 
 		<!-- Required for Ribbon -->
 
 		<link href="css/new_ribbon.css" rel="stylesheet" type="text/css" />
 		<link href="css/soft_button.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="libs/ribbon.js"></script>
 		<link href="css/ribbon-dark.css" rel="stylesheet" type="text/css" />
 		<link href="css/style.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
+		<link href='libs/prism/prism.min.css' rel='stylesheet'>
 
 		<style>
 			/* This style is optional */
