--- a/class_test.html
+++ b/class_test.html
@@ -12,6 +12,9 @@
 		<script type="text/javascript" src="libs/ribbon.js"></script>
 		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
 
+		<script src='libs/prism/prism.js' crossorigin></script>
+		<script src='libs/prism/prism-python.min.js' crossorigin></script>
+
 		<!-- Required for Ribbon -->
 
 		<link href="css/new_ribbon.css" rel="stylesheet" type="text/css" />
