--- a/class_test.html
+++ b/class_test.html
@@ -122,9 +122,9 @@
 				/*
 				asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
-				asanai.predict_image("test_image", "test_image_prediction", true, true);
+				await asanai.predict_image("test_image", "test_image_prediction", true, true);
 				*/
-				asanai.predict_image("test_image_two", "test_image_two_prediction", true, true);
+				await asanai.predict_image("test_image_two", "test_image_two_prediction", true, true);
 
 				//asanai.write_tensors_info("memory");
 
