--- a/class_test.html
+++ b/class_test.html
@@ -119,7 +119,7 @@
 				asanai.draw_fcnn("fcnn_div");
 				asanai.write_model_summary("summary_pre")
 
-				asanai.show_and_predict_webcam_in_div("webcam_prediction");
+				//asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
 				await asanai.predict_image("test_image", "test_image_prediction", true, true);
 				await asanai.predict_image("test_image_two", "test_image_two_prediction", true, true);
