--- a/manual.html
+++ b/manual.html
@@ -196,7 +196,7 @@
 			};
 		</script>
 		<div id="training_data"></div>
-		<img src="gui/logo_small.png" />
+		<img src="_gui/logo_small.png" />
 		<div id="toc"></div>
 		<div id="contents">
 			<h2>General outline</h2>
