--- a/manual.html
+++ b/manual.html
@@ -511,7 +511,7 @@ x_1, x_2, x_3, y_1, y_2, y_3
 <br>
 			It's recommended that in each batch, if possible, there are data from many different categories, so the network doesn't <a href="#Overfitting">overfit</a> in each batch. Therefore, the data is shuffled by default, so the likelyhood of one batch containing only one type of image is drastically reduced.
 <br>
-			<h4>How the computer calculates derivatives of very complex function</h4>
+			<h4>How the computer calculates derivatives of very complex functions</h4>
 <br>
 			One possible definition of derivates is this equation:
 <br>
