--- a/class_test.html
+++ b/class_test.html
@@ -99,12 +99,12 @@
 					optimizer_config: optimizer_config,
 					translations_file: "translations.php?print=1",
 					optimizer_table_div_name: "optimizer_div",
+					asanai_name: "asanai",
 					//math_tab_code_div: "math_tab_code"
 				});
 
 				asanai.show_status_bar();
 				//asanai.show_ribbon(); // yet tbd
-				asanai.set_asanai_name("asanai");
 
 				await asanai.set_default_bar_color("yellow")
 				await asanai.set_max_bar_color("#ff00aa")
