--- a/class_test.html
+++ b/class_test.html
@@ -99,7 +99,7 @@
 					optimizer_config: optimizer_config,
 					translations_file: "translations.php?print=1",
 					optimizer_table_div_name: "optimizer_div",
-					asanai_name: "asanai",
+					asanai_object_name: "asanai",
 					//math_tab_code_div: "math_tab_code"
 				});
 
