--- a/class_test.html
+++ b/class_test.html
@@ -103,6 +103,8 @@
 					//math_tab_code_div: "math_tab_code"
 				});
 
+				asanai.set_mode("expert");
+
 				asanai.show_status_bar();
 				//asanai.show_ribbon(); // yet tbd
 
