--- a/class_test.html
+++ b/class_test.html
@@ -38,7 +38,7 @@
 		</style>
 	</head>
 	<body>
-		<!--<div id="ribbon_content"></div>-->
+		<div id="memory"></div>
 
 		<button onclick="test_model_switch()">Test model switch 1</button>
 		<button onclick="test_model_switch_two()">Test model switch 2</button>
@@ -129,7 +129,7 @@
 				await asanai.predict_image("test_image", "test_image_prediction", true, true);
 				await asanai.predict_image("test_image_two", "test_image_two_prediction", true, true);
 
-				//asanai.write_tensors_info("memory");
+				asanai.write_tensors_info("memory");
 
 				$('#enable-btn').click(function() {
 					$('#del-table-btn').enable();
