--- a/class_test.html
+++ b/class_test.html
@@ -264,7 +264,7 @@
 					//["traindata/signs/mandatory/120px-DIN_4844-2_D-M009.svg.png", "mandatory"]
 				]);
 
-				console.log(loaded_data);
+				//console.log(loaded_data);
 			
 				var history = await asanai.fit(loaded_data.x, loaded_data.y, {epochs: 5, batchSize: 20, shuffle: true}, {'div': 'plotly_history'});
 
