--- a/class_test.html
+++ b/class_test.html
@@ -233,7 +233,7 @@
 				if(history) {
 					console.log("history:", history);
 				} else {
-					console.error("training failed");
+					console.error("Training failed");
 				}
 
 				await asanai.dispose(loaded_data.x);
@@ -271,7 +271,7 @@
 				if(history) {
 					console.log("history:", history);
 				} else {
-					console.error("training failed");
+					console.error("Training failed");
 				}
 
 				await asanai.dispose(loaded_data.x);
