--- a/class_test.html
+++ b/class_test.html
@@ -97,7 +97,7 @@
 					translations_file: "translations.php?print=1",
 					optimizer_table_div_name: "optimizer_div",
 					asanai_object_name: "asanai",
-					//math_tab_code_div: "math_tab_code"
+					math_tab_code_div: "math_tab_code"
 				});
 
 				asanai.set_mode("expert");
