--- a/class_test.html
+++ b/class_test.html
@@ -35,9 +35,9 @@
 	<body>
 		<div id="memory"></div>
 
-		<button onclick="test_model_switch()">Test model switch 1</button>
-		<button onclick="test_model_switch_two()">Test model switch 2</button>
-		<button onclick="test_model_switch_three()">Test model switch 3</button>
+		<button onclick="test_model_switch()">[20, 20, 3] -> [20, 20, 3]</button>
+		<button onclick="test_model_switch_two()">[20, 20, 3] -> [4]</button>
+		<button onclick="test_model_switch_three()">[5] -> [4]</button>
 		<button onclick="load_test_images_and_train()">Load test images and train</button>
 
 		<div id="optimizer_div"></div>
