--- a/class_test.html
+++ b/class_test.html
@@ -30,6 +30,11 @@
 				padding: 20px;
 				border: 2px solid red;
 			}  
+
+			button {
+				margin: 10px;
+				background-color: lightgray;
+			}
 		</style>
 	</head>
 	<body>
