--- a/class_test.html
+++ b/class_test.html
@@ -45,6 +45,9 @@
 		<button onclick="test_model_switch_three()">[5] -> [4]</button><br>
 		<button onclick="load_test_images_and_train()">Load test images and train</button><br>
 
+		<div class="maximally_activated_class"></div>
+		<div id="maximally_activated_content"></div>
+
 		<div id="optimizer_div"></div>
 
 		<pre>====</pre>
