--- a/class_test.html
+++ b/class_test.html
@@ -45,6 +45,8 @@
 		<button onclick="test_model_switch_three()">[5] -> [4]</button><br>
 		<button onclick="load_test_images_and_train()">Load test images and train</button><br>
 
+		<button onclick='asanai.draw_maximally_activated_layer(0)'>Draw maximally activated neuron for first layer</button><br>
+
 		<div class="maximally_activated_class"></div>
 		<div id="maximally_activated_content"></div>
 
