--- a/class_test.html
+++ b/class_test.html
@@ -116,6 +116,8 @@
 				await asanai.set_max_bar_color("#ff00aa")
 				await asanai.set_bar_background_color("orange")
 
+				asanai.set_max_activation_iterations(4)
+
 				asanai.set_divide_by(255);
 
 				asanai.set_labels(["erste kategorie", "zweite kategorie", "dritte kategorie", "vierte kategorie"]);
