--- a/class_test.html
+++ b/class_test.html
@@ -38,6 +38,11 @@
 		</style>
 	</head>
 	<body>
+		<div style="font-size: 32px; user-select: none">
+			<span onclick='asanai.set_lang("de")'>&#127465;&#127466;</span>
+			<span onclick='asanai.set_lang("en")'>&#127482;&#127480;</span>
+		</div>
+
 		<div id="memory"></div>
 
 		<button onclick="test_model_switch()">[20, 20, 3] -> [20, 20, 3]</button><br>
