--- a/class_test.html
+++ b/class_test.html
@@ -68,18 +68,18 @@
 		<div class="float-container">
 			<div class="float-child">
 				<img id="test_image" src="traindata/signs/example/e_warning.png" width=50 height=50 />
-				<pre id="test_image_prediction"></pre>
+				<span id="test_image_prediction"></span>
 			</div>
 			<div class="float-child">
 				<img id="test_image_two" src="traindata/signs/example/c_prohibition.png" width=50 height=50 />
-				<pre id="test_image_two_prediction"></pre>
+				<span id="test_image_two_prediction"></span>
 			</div>
 		</div>
 
 		<br>
 
 		<br>
-		<pre id="summary_pre"></pre>
+		<div id="summary"></div>
 		<br>
 
 		<div id="webcam_prediction"></div>
@@ -132,7 +132,7 @@
 				//asanai.hide_internals();
 
 				asanai.draw_fcnn("fcnn_div");
-				asanai.write_model_summary("summary_pre")
+				asanai.write_model_summary("summary")
 
 				asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
