--- a/class_test.html
+++ b/class_test.html
@@ -67,11 +67,11 @@
 
 		<div class="float-container">
 			<div class="float-child">
-				<img id="test_image" src="traindata/signs/example/e_warning.png" width=50 height=50 />
+				<center><img id="test_image" src="traindata/signs/example/e_warning.png" width=50 height=50 /></center>
 				<span id="test_image_prediction"></span>
 			</div>
 			<div class="float-child">
-				<img id="test_image_two" src="traindata/signs/example/c_prohibition.png" width=50 height=50 />
+				<center><img id="test_image_two" src="traindata/signs/example/c_prohibition.png" width=50 height=50 /></center>
 				<span id="test_image_two_prediction"></span>
 			</div>
 		</div>
