--- a/manual.html
+++ b/manual.html
@@ -29,6 +29,7 @@
 		<script src='model.js'></script>
 		<script src='gui.js'></script>
 		<script src='debug.js'></script>
+		<script src="libs/md5.umd.min.js"></script>
 		<style>
 			body {
 				font-family: sans-serif;
