--- a/manual.html
+++ b/manual.html
@@ -99,6 +99,12 @@
 			img {
 				max-width: 90%;
 			}
+
+			.error_msg {
+				background-color: red;
+				color: white;
+				font-size: 2em;
+			}
 		</style>
 	</head>
 	<body>
