--- a/manual.html
+++ b/manual.html
@@ -433,7 +433,7 @@ x_1, x_2, x_3, y_1, y_2, y_3
 			This is called a sequential model, since the data flows through it sequentially. There are other types of models, but they cannot be designed with asanAI.
 <br>
 			<h3>What do functions have to do with neural networks?</h3>
-			A mathematical function assigns values from one set to values from another. For example, the function \( \text{nth\_prime}(n) \) assigns natural numbers \( (1, 2, 3, \dots) \) to a subset of natural numbers, prime numbers, \( (2, 3, 5, \dots) \).
+			A mathematical function assigns values from one set to values from another.
 <br>
 			Since parameters for functions can also be matrices, or even tensors, you can define a computer program as a function that gets some input and produces a specific output, depending solely on the inputs.
 <br>
