--- a/class_test.html
+++ b/class_test.html
@@ -9,8 +9,8 @@
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 		<script src='libs/temml/temml.js' crossorigin></script>
 		<script src='libs/md5.umd.min.js' crossorigin></script>
-		<script type="text/javascript" src="libs/ribbon.js"></script>
-		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
+		<script src="libs/ribbon.js"></script>
+		<script src="libs/jquery.tooltip.min.js"></script>
 
 		<script src='libs/prism/prism.js' crossorigin></script>
 		<script src='libs/prism/prism-python.min.js' crossorigin></script>
