--- a/class_test.html
+++ b/class_test.html
@@ -45,9 +45,9 @@
 
 		<div id="memory"></div>
 
-		<button onclick="test_model_switch()">[20, 20, 3] -> [20, 20, 3]</button><br>
-		<button onclick="test_model_switch_two()">[20, 20, 3] -> [4]</button><br>
-		<button onclick="test_model_switch_three()">[5] -> [4]</button><br>
+		<button onclick="test_model_switch()">Shape: [20, 20, 3] -> [20, 20, 3]</button><br>
+		<button onclick="test_model_switch_two()">Shape: [20, 20, 3] -> [4]</button><br>
+		<button onclick="test_model_switch_three()">Shape: [5] -> [4]</button><br>
 		<button onclick="load_test_images_and_train()">Load test images and train</button><br>
 
 		<button onclick='asanai.draw_maximally_activated_layer(0)'>Draw maximally activated neuron for first layer</button><br>
