--- a/class_test.html
+++ b/class_test.html
@@ -45,9 +45,8 @@
 
 		<div id="memory"></div>
 
-		<div id="custom_internal_states_layer">
-			<div id="layer_1_kernel_9"></div>
-			<div id="layer_1_neuron_2"></div>
+			<div class="custom_internal_states_layer" id="layer_1_kernel_9"></div>
+			<div class="custom_internal_states_layer" id="layer_1_neuron_2"></div>
 		</div>
 
 		<button onclick="test_model_switch()">Shape: [20, 20, 3] -> [20, 20, 3]</button><br>
