--- a/class_test.html
+++ b/class_test.html
@@ -44,12 +44,13 @@
 		</div>
 
 		<div id="memory"></div>
-
+			<!--
 			<div class="custom_internal_states_layer" id="layer_1_kernel_9"></div>
 			<div class="custom_internal_states_layer" id="layer_1_neuron_2"></div>
 			<div class="custom_internal_states_layer" id="layer_1_kernel_9"></div>
 			<div class="custom_internal_states_layer" id="layer_1_kernel_10"></div>
-			<div class="custom_internal_states_layer" id="layer_1_kernel_11"></div>
+			-->
+			<div class="custom_internal_states_layer" id="layer_4_neuron_0"></div>
 		</div>
 
 		<button onclick="test_model_switch()">Shape: [20, 20, 3] -> [20, 20, 3]</button><br>
