--- a/class_test.html
+++ b/class_test.html
@@ -48,6 +48,7 @@
 			<div class="custom_internal_states_layer" id="layer_1_neuron_2"></div>
 			<div class="custom_internal_states_layer" id="layer_1_kernel_9"></div>
 			<div class="custom_internal_states_layer" id="layer_1_kernel_10"></div>
+			<div class="custom_internal_states_layer" id="layer_3_neuron_0"></div>
 			<div class="custom_internal_states_layer" id="layer_4_neuron_0"></div>
 		</div>
 
