--- a/class_test.html
+++ b/class_test.html
@@ -179,7 +179,7 @@
 
 				// This is optional, but lets you allow colors of the bars in predictions
 				await asanai.set_default_bar_color("yellow")
-				await asanai.set_max_bar_color("#ff00aa")
+				await asanai.set_max_bar_color("green")
 				await asanai.set_bar_background_color("orange")
 
 				// This sets the maximum amount of iterations for "layer visualization images". 
