--- a/class_test.html
+++ b/class_test.html
@@ -178,9 +178,9 @@
 				asanai.show_status_bar();
 
 				// This is optional, but lets you allow colors of the bars in predictions
-				await asanai.set_default_bar_color("gray")
+				await asanai.set_default_bar_color("red")
 				await asanai.set_max_bar_color("green")
-				await asanai.set_bar_background_color("red")
+				await asanai.set_bar_background_color("#afafaf")
 
 				// This sets the maximum amount of iterations for "layer visualization images". 
 				asanai.set_max_activation_iterations(4)
